Initial Commit - Responsive Design Small View Restaurant Details

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,3 +273,101 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+@media only screen and (max-width: 599px) {
+/* ====================== Small View Restaurant Details ====================== */
+nav h1 a {
+    letter-spacing: 4.0px;
+    line-height: 4.0;
+    font-size: 105%;
+    width: 100%;
+  }
+  #breadcrumb {
+    padding: 10px 8px 10px;
+    width: 100%;
+  }
+  #breadcrumb li {
+    font-size: 100%;
+  }
+  .inside #map-container {
+    position: absolute;
+    width: 100%;
+    top: 125px;
+    height: 12%;
+  }
+  #restaurant-container{
+  padding: 395px 0px 10px 0px;
+  width: 80%;
+  }
+  #restaurant-name {
+    font-size: 150%;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+  #restaurant-img {
+    margin-left: 10px;
+  }
+  #restaurant-cuisine {
+    margin-left: 10px;
+  }
+  #restaurant-address {
+    margin-left: 10px;
+  }
+  #restaurant-hours {
+    margin-left: 10px;
+  }
+  .inside #maincontent {
+  /*#maincontent {*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #reviews-container {
+    width: 75%;
+  }
+  .inside #footer {
+    margin-top: 20px;
+    width: 90%;
+    }
+  #reviews-list li {
+    width: 90%;
+    box-shadow: 0 0 2px 2px black;
+    border-top-left-radius: 10px;
+    padding-left: 0px;
+    border-width: 0px;
+    padding-right: 0px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #name {
+    background: black;
+    color: white;
+    padding-left: 10px;
+    border-top-left-radius: 10px;
+    width: 100%;
+    flex: 33.33%;
+  }
+  #date {
+    background: black;
+    color: #CBCBCB;
+    text-align: right;
+    width: 100%;
+    flex: 33.33%;
+  }
+  #rating {
+    background: #F2A83A;
+    color: white;
+    width: 30%;
+    border-left: 10px;
+    border-left-color: #fff;
+    border-left-style: solid;
+  }
+  #comments {
+    padding-left: 10px;
+    padding-right: 5px;
+  }
+/* ====================== Small View Main Page ====================== */
+
+}
