Responsive Design Medium View

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ nav h1 a {
     width: calc(50% - 80px);
 }
 
-/* Display list items side by side */
+ Display list items side by side 
 #breadcrumb li {
     display: inline;
 }
@@ -272,129 +272,4 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
-}
-
-@media only screen and (max-width: 599px) {
-/* ====================== Small View Restaurant Details ====================== */
-nav h1 a {
-    letter-spacing: 3.0px;
-    line-height: 4.0;
-    font-size: 105%;
-    width: 100%;
-  }
-  .inside #breadcrumb {
-    padding: 10px 8px 10px;
-    width: 100%;
-  }
-  .inside #breadcrumb li {
-    font-size: 100%;
-  }
-  .inside #map-container {
-    position: absolute;
-    width: 100%;
-    top: 125px;
-    height: 12%;
-  }
-  .inside #restaurant-container{
-  padding: 395px 0px 10px 0px;
-  width: 80%;
-  }
-  .inside #restaurant-name {
-    font-size: 150%;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    margin-top: 10px;
-    margin-left: 10px;
-  }
-  .inside #restaurant-img {
-    margin-left: 10px;
-  }
-  .inside #restaurant-cuisine {
-    margin-left: 10px;
-  }
-  .inside #restaurant-address {
-    margin-left: 10px;
-  }
-  .inside #restaurant-hours {
-    margin-left: 10px;
-  }
-  .inside #maincontent {
-  /*#maincontent {*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .inside #reviews-container {
-    width: 75%;
-  }
-  .inside #footer {
-    margin-top: 20px;
-    width: 90%;
-    }
-  .inside #reviews-list li {
-    width: 90%;
-    box-shadow: 0 0 2px 2px black;
-    border-top-left-radius: 10px;
-    padding-left: 0px;
-    border-width: 0px;
-    padding-right: 0px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .inside #name {
-    background: black;
-    color: white;
-    padding-left: 10px;
-    border-top-left-radius: 10px;
-    width: 100%;
-    flex: 33.33%;
-  }
-  .inside #date {
-    background: black;
-    color: #CBCBCB;
-    text-align: right;
-    width: 100%;
-    flex: 33.33%;
-  }
-  .inside #rating {
-    background: #F2A83A;
-    color: white;
-    width: 30%;
-    border-left: 10px;
-    border-left-color: #fff;
-    border-left-style: solid;
-  }
-  .inside #comments {
-    padding-left: 10px;
-    padding-right: 5px;
-  }
-/* ====================== Small View Main Page ====================== */
-  .filter-options {
-    height: 140px;
-  }
-
-  #neighborhoods-select, #cuisines-select {
-    width: 94%;
-  }
-
-  .filter-options h2 {
-    padding-top: 3%;
-  }
-
-  #restaurants-list .restaurant-img {
-    border-radius: 10px;
-    min-width: 50%;
-    min-height: 50%;
-  }
-
-  #restaurants-list li {
-    padding: 10% 10% 0;
-    width: 70%;
-    text-align: center;
-    border-radius: 10px;
-  }
-
-  #restaurants-list li a {
-    margin: 10%;
-  }
 }
