Responsive Design Large View

--- a/css/large.css
+++ b/css/large.css
@@ -1,56 +1,16 @@
-@media only screen and (min-width: 600px) and (max-width:799px) {
-/* ====================== Medium View Restaurant Details ====================== */
-  nav h1 a {
-      letter-spacing: 3.0px;
-      line-height: 4.0;
-      font-size: 105%;
-      width: 100%;
-    }
-  .inside #breadcrumb {
-    padding: 10px 8px 10px;
+@media only screen and (min-width: 800px) {
+/* ====================== Large View Restaurant Details ====================== */
+nav h1 a {
+    letter-spacing: 3.0px;
+    line-height: 4.0;
+    font-size: 105%;
     width: 100%;
-  }
-  .inside #breadcrumb li {
-    font-size: 100%;
-  }
-  .inside #map-container {
-    position: absolute;
-    width: 100%;
-    top: 125px;
-    height: 20%;
   }
   .inside #restaurant-container{
-  padding: 560px 0px 10px 0px;
-  width: 80%;
-  }
-  .inside #restaurant-name {
-    font-size: 150%;
-    padding-bottom: 5px;
-    padding-top: 20px;
-    margin-top: 10px;
-    margin-left: 10px;
-  }
-  .inside #restaurant-img {
-    margin-left: 10px;
-    width: 100%;
-  }
-  .inside #restaurant-cuisine {
-    margin-left: 10px;
-    width: 100%;
-  }
-  .inside #restaurant-address {
-    margin-left: 10px;
-  }
-  .inside #restaurant-hours {
-    margin-left: 10px;
-  }
-  .inside #maincontent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 45%;
   }
   .inside #reviews-container {
-    width: 75%;
+    width: 42%;
   }
   .inside #footer {
     margin-top: 20px;
@@ -93,23 +53,23 @@
     padding-left: 10px;
     padding-right: 5px;
   }
-/* ====================== Medium View Main Page ====================== */
+/* ====================== Large View Main Page ====================== */
   .filter-options h2 {
     width: 100%;
   }
 
   .filter-options {
-    height: 100px;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
   }
 
   #neighborhoods-select, #cuisines-select {
-    width: 46%;
+    width: 25%;
   }
 
   .filter-options h2 {
-    padding-top: 3%;
+    padding-top: 1%;
   }
 
   #restaurants-list .restaurant-img {
@@ -125,13 +85,7 @@
 
 
   #restaurants-list li {
-    padding: 10% 10% 0;
-    width: 23%;
+    padding: 5% 5% 0;
     text-align: center;
     border-radius: 10px;
   }
-
-  #restaurants-list li a {
-    margin: 10%;
-  }
-}
