--- a/css/medium.css
+++ b/css/medium.css
@@ -1,14 +1,18 @@
 @media only screen and (min-width: 600px) and (max-width:799px) {
 /* ====================== Medium View Restaurant Details ====================== */
   nav h1 a {
-      letter-spacing: 3.0px;
-      line-height: 4.0;
-      font-size: 105%;
-      width: 100%;
-    }
+    letter-spacing: 3.0px;
+    line-height: 4.0;
+    font-size: 105%;
+    width: 100%;
+  }
   .inside #breadcrumb {
     padding: 10px 8px 10px;
     width: 100%;
+    display: flex;
+  }
+  .inside header {
+    position: relative;
   }
   .inside #breadcrumb li {
     font-size: 100%;
@@ -16,19 +20,20 @@
   .inside #map-container {
     position: absolute;
     width: 100%;
-    top: 125px;
+    top: 150px;
     height: 20%;
   }
   .inside #restaurant-container{
-  padding: 560px 0px 10px 0px;
-  width: 80%;
+    padding: 425px 0px 10px 0px;
+    width: 80%;
   }
   .inside #restaurant-name {
     font-size: 150%;
     padding-bottom: 5px;
     padding-top: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 10px;
+    margin-bottom: 10px;
   }
   .inside #restaurant-img {
     margin-left: 10px;
@@ -54,7 +59,7 @@
   }
   .inside #footer {
     margin-top: 20px;
-    width: 90%;
+    width: 100%;
     }
   .inside #reviews-list li {
     width: 100%;
