--- a/css/small.css
+++ b/css/small.css
@@ -1,14 +1,18 @@
 @media only screen and (max-width: 599px) {
 /* ====================== Small View Restaurant Details ====================== */
   nav h1 a {
-      letter-spacing: 3.0px;
-      line-height: 4.0;
-      font-size: 105%;
-      width: 100%;
-    }
+    letter-spacing: 3.0px;
+    line-height: 4.0;
+    font-size: 105%;
+    width: 100%;
+  }
+  .inside header {
+    position: relative;
+  }
   .inside #breadcrumb {
     padding: 10px 8px 10px;
     width: 100%;
+    display: flex;
   }
   .inside #breadcrumb li {
     font-size: 100%;
@@ -16,19 +20,20 @@
   .inside #map-container {
     position: absolute;
     width: 100%;
-    top: 125px;
+    top: 150px;
     height: 12%;
   }
   .inside #restaurant-container{
-  padding: 395px 0px 10px 0px;
-  width: 80%;
-  }
+    padding: 250px 0px 10px 0px;
+    width: 80%;
+    }
   .inside #restaurant-name {
     font-size: 150%;
     padding-bottom: 5px;
-    padding-top: 5px;
-    margin-top: 10px;
+    padding-top: 20px;
+    margin-top: 30px;
     margin-left: 10px;
+    margin-bottom: 10px;
   }
   .inside #restaurant-img {
     margin-left: 10px;
